style.css
/* ... */
.crit-list{
	margin-top: 0em;
	margin-bottom: 1em;
}
.artifacts-list li{
	padding-bottom: 1em;
}
/* The following item is used on the site_map.html page. */
.sitemap-list{
	display: inline-block;
	text-indent: 0;
	margin-left: 1em;
}
@media only screen and (min-width: 768px){
	.map-list{
		text-indent: 1em;

	}
}


/** 2.0 Transcription CSS **/

/* 2.1. Textual divisions */

.transcription{
	text-align: center;
}
.manuscript,
.journal,
.artifact{
	font-size: 1.3em;
	line-height: 1.6em;
	display: block;
}
@media only screen and (min-width: 992px){
	.manuscript,
	.journal,
	.artifact{
		font-size: 1.2em;
		display: block !important; /* Tied to overlay */
	}
}
.manuscript .TEI{
	padding: 2em 0 5em 0;
	margin: 2em 0;
	border: 2px solid gainsboro;
}
.manuscript .ms-container{
	display: inline-block;
	/*white-space:nowrap;*/
	text-align: left;
	margin-left: .5em;
	margin-right: .5em;
}
.manuscript .front{
	margin-bottom: -1em;
}
.manuscript .back{
	margin-top: -1em;
}
/* This and the next item turn off wide manuscript items on mobile. See corresponding XSL. Also see https://dev.to/ananyaneogi/useful-css-media-query-features-o7f */
@media only screen and (max-aspect-ratio: 5/8) and (max-width: 580px), only screen and (orientation: portrait) and (max-width: 580px){
	body .manuscript{
		display: none;
	}
	body .narrow-mobile{
		display: block;
	}
}
.narrow-mobile{
	font-size: 1.1em;
	font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
	background-color: #dbdbdb;
	line-height: 1.6em;
	padding: 1em;
	margin: 1em;
	border: 1px solid black; /*#2e68ac*/ /*#cc4943*/
	display: none;
	overflow-wrap: initial;
	word-wrap: initial;
	word-break: initial;
	hyphens: initial;
	-ms-word-break: initial;
	-ms-hyphens: initial;
	-moz-hyphens: initial;
	-webkit-hyphens: initial;
}
.journal .TEI{
	display: block;
	text-align: justify;
	padding: 1.5em 0 2em 0;
	margin-left: auto;
	margin-right: auto;
}
.artifact .TEI{
	padding: 0;
}
@media only screen and (min-width: 768px){
	.artifact .TEI{
		padding: 1em 0;
	}
}


/* 2.2. Back-button */

.back-button a,
.back-button a:visited{
	font-family: Arial, Geneva, Tahoma, sans-serif;
	color: #2e68ac;
	text-decoration: none;
}
.back-button a:hover{
	color: #cc4943;
}
.title .back-button{
	font-size: .95em;
	font-weight: 300;
	padding-top: .5em;
	left: 0;
	position: absolute;
}
@media only screen and (min-width: 768px){
	.title .back-button{
		font-size: 1.05em;
		padding-top: .3em;
	}
}
@media only screen and (min-width: 992px){
	.title .back-button{
		font-size: 1.1em;
		padding-top: .1em;
	}
}


/* 2.3. Pagebreaks, linebreaks, linenumbers */

.pb-title{
	color: #428bca;
	font-size: .9em;
	font-family: "source sans pro", calibri, arial, helvetica, sans-serif;
	text-decoration: none;
	text-indent: 0;
}
.manuscript .pb-title{
	padding-top: 2em;
	margin: 2em 0 .5em 0;
	border-top: 1px dotted #858585;
	width: 100%;
	display: inline-block;
}
.journal .pb-title{
	margin: 4em 0 .5em 0;
	display: block;
}
.artifact .pb-title{
	text-align: left;
	width: 100%;
	display: inline-block;
}
.manuscript .TEI.front .ms-container .div:first-of-type .pb-title:first-of-type,
.manuscript .TEI .ms-container .body .div:first-of-type .pb-title:first-of-type,
.manuscript .TEI.back .ms-container .div:first-of-type .pb-title:first-of-type,
.journal .TEI .text .body .div .pb-title:first-of-type,
.artifact .TEI .ms-container .body .div:first-of-type .pb-title:first-of-type{
	margin-top: 0;
	padding-top: 0;
	border-top: none;
}
.blank{
	color: #65615b;
	font-size: .9em;
	font-style: italic;
}
.image-enlarge{
	color: #65615b;
	font-size: .85em;
	font-style: italic;
	display: none;
}
@media only screen and (min-width: 768px){
	.image-enlarge{
		display: block;
	}
}
.linenumber{
	font-size: .8em;
	font-family: "source sans pro", calibri, arial, helvetica, sans-serif;
	color: #8c8b85;
	text-align: right;
	float: left;
	margin-left: -3em; /*!important removed*/
	width: 1em;
	display: none;
}
.p .linenumber{
	text-indent: -1%;
}
.p.noindent.linenumber{
	text-indent: 1em;
}
.p.center .linenumber{
	margin-left: -6.4em; /*!important removed*/
}
.p.right .linenumber{
	margin-left: -10.5em; /*!important removed*/
}
.list .linenumber{
	text-indent: 0;
}


/* 2.5. Parts of the page */

.p,
.ab{
	text-indent: 25px;
	margin-top: 0;
	margin-bottom: 0;
}
.manuscript .p,
.manuscript .ab,
.artifact .p,
.artifact .ab{
	display: inline-block
}
.artifact p{
	padding: 0;
	margin: 0;
}
.journal .p,
.journal .ab{
	display: block;
}
.p.noindent,
.p.center,
.p.right,
.ab.noindent,
.ab.center,
.ab.right{
	text-indent: 0;
}
.journal .p.center,
.journal .ab.center,
.journal .fw{
	display: block;
}
.head{
	font-weight: normal;
	text-indent: 0;
	text-align: center;
	display: block;
}
.note{
	text-align: left;
}
.fw{
	text-indent: 0;
	text-align: center;
	line-height: 1.3em;
	margin-bottom: .5em;
	overflow: hidden;
}
.manuscript .fw{
	display: inline;
}
.fw .center{
	display: inline
}
.fw.pageno{
	text-indent: 0;
}
.fw.catch.right{
	margin-left: 14em;
	text-indent: 0;
}
table{
	border-style: none;
	margin: 0 auto;
	line-height: 1.3em;
}
tr,
td{
	border-style: none;
}
table .linenumber{
	display: none;
}


/* 2.5. Milestone and lines */

.milestone{
	display: block;
	text-align: left;
	background: #FFF;
	height: 0;
	padding: 0px;
}
.journal .milestone{
	width: 100%;
}
.manuscript .line,
.manuscript .doubleline,
.manuscript .tripleline,
.manuscript .second-line,
.manuscript .third-line{
	/* width: TBD */
}
.line{
	border-bottom: 1px solid #d0d0d0;
	border: 0;
	border-top: 1px solid #58484b;
}
.doubleline{
	border-top: 4px double #8c8b8b;
}
.tripleline{
	line-height: 1.9em;
	border-top: 4px double #8c8b8b;
}
.halfline{
	border-bottom: 1px solid #d0d0d0;
	border: 0;
	border-top: 1px solid #58484b;
	padding: 0;
}
.manuscript .halfline{
	width: 50%;
	margin: 1em auto -1em auto;
}
.journal .halfline{
	width: 60%;
	margin: 2em auto;
}
/* ... */

